# patricktrainer.github.io

./: .gitmodules  404.html  CNAME  archives.html  authors.html  categories.html  config.yml  hello-world.html  index.html  index.json  index.xml  pelicanconf.py  publishconf.py  pyproject.toml  robots.txt  sitemap.xml  tags.html  tasks.py  test-post.html  world-hello.html
.github/workflows/: gh-pages.yml
author/: patrick-trainer.html
categories/: index.html  index.xml
category/: misc.html
config/_default/: config.toml  languages.en.toml  menus.en.toml  params.toml
content/posts/: 16-Startup-Metrics-Andreessen-Horowitz.md  2-How-VC-works-A-Beginner-s-Guide-Simplanatio.md  2001-03147-Age-Partitioned-Bloom-Filters.md  3-Things-to-Avoid-When-Setting-Up-an-Amazon-Redshi.md  3-Ways-to-Change-a-Users-Default-Shell-in-Linux.md  3-tricks-to-start-working-despite-not-feeling-like.md  311-OPCD-Calls-2012-Present-Socrata-API-Foundry.md  4-questions-to-help-accurately-scope-analytics-eng.md  A-2020-Vision-of-Linear-Algebra-MIT-OpenCourseWare.md  A-Beginner-s-Guide-to-Data-Engineering-Part-II.md  AIP-Improvement-Proposals.md  (+272 more)
feeds/: all.atom.xml  misc.atom.xml
js/: main.bundle.min.133f972d917187379911c24da599313cad8a5b8af23ce2a86df7ab511693d25edfb1e8733f47db6f42835fcb9cf0d6d1f9438fb35cb7f88f70b963a0dde74082.js  main.bundle.min.3931a034f8fef65e61a4ab712c49a4d9a0c9f2b5cd4a5617c54f6c67ae72e078e1380a6d11d05833fdc6a3f27b87c0dda7e10f6be64240e156496d828786acf2.js
posts/: index.html  index.xml
public/: 404.html  index.html  index.xml  sitemap.xml
tags/: index.html  index.xml
(+497 files in other folders)
