[tool.poetry]
name = "patricktrainer.github.io"
version = "0.1.0"
description = "\"The internet\""
authors = ["Patrick Trainer"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
